--- a/01-links/docker-compose.yml
+++ b/01-links/docker-compose.yml
@@ -8,4 +8,14 @@ services:
     build: team-inspire
     ports:
       - "91:90"
+  team-caronte:
+    build: team-caronte
+    ports:
+      - "3000:3000"
+    depends_on:
+      - team-inspire
+      - team-decide
+
+
+
 
